[package]
name = "olm-sys"
version = "0.1.5"
authors = ["BrainBlasted <brainblasted@disroot.org>"]
license = "Apache-2.0"
description = "Low level binding for libolm"
repository = "https://gitlab.gnome.org/BrainBlasted/olm-sys"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }